--- a/d00/ex02/doft.css
+++ b/d00/ex02/doft.css
@@ -1,27 +1,167 @@
-# **************************************************************************** #
-#                                                                              #
-#                                                         :::      ::::::::    #
-#    doft.css                                           :+:      :+:    :+:    #
-#                                                     +:+ +:+         +:+      #
-#    By: agalavan <marvin@42.fr>                    +#+  +:+       +#+         #
-#                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2018/04/02 20:23:09 by agalavan          #+#    #+#              #
-#    Updated: 2018/04/02 20:23:13 by agalavan         ###   ########.fr        #
-#                                                                              #
-# **************************************************************************** #
+/*
+** general styles
+*/
 
 body {
 	background-color: #505050;
+	font-family: sans-serif;
 }
 
-header {
-	background-color: #909090;
-	width: 70%;
+.wrapper { width: 1420px; }
+
+/*
+** header styles
+*/
+
+.nav-bar {
+	width: 1420px;
+	margin: 20px 5%;
+	padding: 10px;
 	border-radius: 10px;
+	background-color: #909090;
+	box-shadow: 10px 9px 12px 3px #010101;
 }
-header img {
-	width: 200px;
+
+.nav-bar #logo {
+	display: inline-block;
 }
-.header-link {
-	width: 10px;
+
+#logo img {
+	width: 400px;
+}
+
+.right-menu {
+	position: relative;
+	float: right;
+	height: 110px;
+}
+
+#loupe {
+	position: absolute;
+	right: 24px;
+	top: -5px;
+}
+
+#loupe img {
+	width: 250px;
+}
+
+.actions #disconnect {
+	position: absolute;
+	bottom: 0px;
+}
+
+.actions #reload img, .actions #disconnect img {
+	width: 20px;
+}
+
+/*
+** content styles
+*/
+
+.content {
+	display: flex;
+	justify-content: space-around;
+	width: 1420px;
+	margin: 20px 5%;
+}
+
+.left-content, .main-content, .right-content {
+	background-color: #909090;
+	padding: 10px;
+	border-radius: 10px;
+	box-shadow: 10px 9px 12px 3px #010101;
+}
+
+.left-content { margin-left: 31px; }
+
+.main-content {
+	width: 1022px;
+	height: 580px;
+	position: relative;
+	float: left;
+	margin-left: 30px;
+	margin-right: 30px;
+}
+
+.main-content img {
+	width: 1024px;
+}
+
+.right-content, .left-content {
+	width: 140px;
+	height: 397px;
+	float: left;
+	text-align: center;
+}
+
+.right-content img, .left-content img {
+	width: 70px;
+}
+
+.left-content #bordered {
+	border: solid red 4px;
+	border-radius: 4px;
+}
+
+.right-content #brick {
+	background-image: url(resources/brick.jpg);
+	width: 100%;
+	height: 70px;
+}
+
+#link-chair {
+	width: 100px;
+	height: 100px;
+	position: absolute;
+	top: 356px;
+	right: 587px;
+}
+
+#link-screen {
+	width: 150px;
+	height: 150px;
+	position: absolute;
+	top: 333px;
+	right: 61px;
+}
+
+/*
+** message styles
+*/
+
+.message {
+	width: 490px;
+	height: 139px;
+	position: absolute;
+	background-color: #50ff79;
+	margin: 20px;
+	padding: 10px 10px;
+	border-radius: 10px;
+	box-shadow: 8px 8px 12px 2px #010101;
+	top: 666px;
+	left: 38px;
+
+	font-size: 16px;
+	letter-spacing: 1px;
+	font-weight: 200;
+}
+
+.message p {
+	margin: 0;
+	padding-bottom: 3px;
+}
+
+#capital {
+	font-weight: bold;
+	font-size: 30px;
+}
+
+#shadow {
+	text-shadow: 6px 4px 4px red;
+}
+
+.form input {
+	width: 388px;
+	color: #f0f0f1;
 }
